DFR-2123: resolve sonar issues (#1101)
* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues

* DFR-2123: resolve sonar issues